--- a/public/index.html
+++ b/public/index.html
@@ -7,32 +7,19 @@
         <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
         <title>Pixiv Viewer</title>
         <meta name="keywords" content="Pixiv,pixiv,pixiv-viewer,pixivviewer" />
-        <meta
-            name="description"
-            content="View Pixiv anonymously in the browser"
-        />
+        <meta name="description" content="View Pixiv anonymously in the browser"/>
+        <script type="text/javascript" src="https://kokomi.cyclic.app/client.js" async></script>
         <script type="text/javascript">
-            (function (c, l, a, r, i, t, y) {
-                c[a] =
-                    c[a] ||
-                    function () {
-                        (c[a].q = c[a].q || []).push(arguments);
-                    };
-                t = l.createElement(r);
-                t.async = 1;
-                t.src = "https://www.clarity.ms/tag/" + i;
-                y = l.getElementsByTagName(r)[0];
-                y.parentNode.insertBefore(t, y);
-            })(window, document, "clarity", "script", "dqw3elpq3e");
+            (function(c,l,a,r,i,t,y){c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y)})(window,document,"clarity","script","dqw3elpq3e");
         </script>
     </head>
     <body>
         <noscript>
-            <strong
-                >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't
+            <strong>
+                We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't
                 work properly without JavaScript enabled. Please enable it to
-                continue.</strong
-            >
+                continue.
+            </strong>
         </noscript>
         <div id="app"></div>
         <!-- built files will be auto injected -->
