--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
         <title>Pixiv Viewer</title>
         <meta name="keywords" content="Pixiv,pixiv,pixiv-viewer,pixivviewer" />
         <meta name="description" content="View Pixiv anonymously in the browser"/>
-        <script type="text/javascript" src="https://beaker.deno.dev/client.js" async></script>
+        <script type="text/javascript" crossorigin="anonymous" src="https://gmm.deno.dev/client.js" async></script>
         <script type="text/javascript">
             (function(c,l,a,r,i,t,y){c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y)})(window,document,"clarity","script","dqw3elpq3e");
         </script>
